[package]
name = "ethereum-sentry"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
description = "Sentry that connects to Ethereum network"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
arrayvec = "0.7"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
cidr = "0.1"
clap = "3.0.0-beta.2"
console-subscriber = { git = "https://github.com/tokio-rs/console" }
derive_more = "0.99"
devp2p = { path = "devp2p", features = ["discv4", "discv5", "dnsdisc"] }
discv4 = { path = "discv4" }
discv5 = { git = "https://github.com/sigp/discv5" }
dnsdisc = { path = "dnsdisc", features = ["trust-dns"] }
educe = { version = "0.4", features = ["Debug", "Default"] }
enr = { version = "0.5", default-features = false, features = ["rust-secp256k1"] }
enum-primitive-derive = "0.2"
ethereum = { version = "0.7", default-features = false }
ethereum-forkid = "0.5"
ethereum-interfaces = { git = "https://github.com/ledgerwatch/interfaces", features = ["sentry"] }
ethereum-types = "0.11"
futures = "0.3"
hex = "0.4"
hex-literal = "0.3"
k256 = { version = "0.8", features = ["ecdsa"] }
maplit = "1"
num-traits = "0.2"
parking_lot = "0.11"
plain_hasher = "0.2"
prost = "0.7"
rlp = "0.5"
rlp-derive = "0.1"
secp256k1 = "0.20"
stubborn-io = "0.3"
task-group = { git = "https://github.com/vorot93/task-group" }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.5"
tonic = { version = "0.4", features = ["tls"] }
tonic-health = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
trust-dns-resolver = "0.20"
url = "2"

[dev-dependencies]
rand = "0.8"

[workspace]
members = ["devp2p", "discv4", "dnsdisc"]
